# simpleRaytracer

./: .gitignore  README.md
raytracer/: CMakeLists.txt  raytracer.sln
raytracer/enc_temp_folder/15d7e1e04b26ac3778850b9914c65b0/: main.cpp
raytracer/include/: camera.h  dielectric.h  hitable.h  hitableList.h  lambertian.h  material.h  metal.h  ray.h  sphere.h  utilities.h  vec3.h
raytracer/raytracer/: hitable.cpp  hitable.h  hitable_list.cpp  hitable_list.h  main.cpp  ray.h  raytracer.vcxproj  raytracer.vcxproj.filters  resource.h  sphere.cpp  sphere.h  vec3.cpp  vec3.h
raytracer/src/: main.cpp  vec3.cpp
